feature: test adsense

--- a/public/chrome-ai/detector/index.html
+++ b/public/chrome-ai/detector/index.html
@@ -24,6 +24,8 @@
       }
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9276514607249827"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>用 Chrome 内置模型检测语种</h1>
