--- a/public/file-system-observer/dir/index.html
+++ b/public/file-system-observer/dir/index.html
@@ -30,6 +30,8 @@
       border-radius: 12px;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9276514607249827"
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>File Observer API 监听文件夹变化</h1>
