--- a/public/file-system-access/input-vs-picker/index.html
+++ b/public/file-system-access/input-vs-picker/index.html
@@ -14,6 +14,8 @@
       border: 1px solid #000;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9276514607249827"
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="info box">
