--- a/public/file-system-access/manager/index.html
+++ b/public/file-system-access/manager/index.html
@@ -81,6 +81,8 @@
       border-radius: 12px;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9276514607249827"
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="alert-box">
