--- a/public/file-system-observer/file/index.html
+++ b/public/file-system-observer/file/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9276514607249827"
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>File Observer API 监听文件变化</h1>
